--- a/work.html
+++ b/work.html
@@ -1,285 +1,214 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Work — Darren Steptoe</title>
+  <meta name="description" content="Media production, documentary work, and institutional experience." />
+  <link rel="stylesheet" href="./styles.css" />
 
   <style>
-    :root {
-      --bg: #0e0e10;
-      --panel: #141418;
-      --border: rgba(255,255,255,0.08);
-      --text: #e9e9ee;
-      --muted: #b6b6c2;
-      --purple: #c9a8ff;
-      --purple-border: rgba(170,120,255,0.35);
-      --purple-bg: rgba(170,120,255,0.15);
-      --green: #2ecc71;
+    .openRow{
+      display:flex;
+      justify-content:flex-end;
+      align-items:center;
+      gap:10px;
+      margin:6px 0 14px;
+      font-size:12px;
+      font-weight:700;
+      color:#2ecc71;
+    }
+    .openDot{
+      width:10px;
+      height:10px;
+      border-radius:999px;
+      background:#2ecc71;
+      box-shadow:0 0 0 0 rgba(46,204,113,0.7);
+      animation:pulse 2s infinite;
+    }
+    @keyframes pulse{
+      0%{box-shadow:0 0 0 0 rgba(46,204,113,0.7);}
+      70%{box-shadow:0 0 0 10px rgba(46,204,113,0);}
+      100%{box-shadow:0 0 0 0 rgba(46,204,113,0);}
     }
 
-    * {
-      box-sizing: border-box;
+    .imdbLink{
+      display:flex;
+      gap:16px;
+      align-items:stretch;
+      color:inherit;
+      text-decoration:none;
+      padding:0;
+      margin:0;
+      border-radius:0;
+      background:transparent;
+      border:0;
+      box-shadow:none;
     }
-
-    body {
-      margin: 0;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      background: var(--bg);
-      color: var(--text);
-      line-height: 1.55;
+    .imdbBadge{
+      width:56px;
+      min-width:56px;
+      background:#f5c518;
+      display:grid;
+      place-items:center;
+      font-weight:900;
+      font-size:16px;
+      color:#111;
     }
-
-    a {
-      color: var(--purple);
-      text-decoration: none;
+    .imdbContent{
+      flex:1;
+      display:grid;
+      gap:8px;
+      min-width:0;
     }
-
-    .container {
-      max-width: 960px;
-      margin: 0 auto;
-      padding: 32px 20px 80px;
+    .imdbTitleRow{
+      display:flex;
+      justify-content:space-between;
+      align-items:baseline;
+      gap:12px;
+      min-width:0;
     }
-
-    h1 {
-      font-size: 28px;
-      margin: 0 0 24px;
+    .imdbTitle{
+      margin:0;
+      font-size:16px;
+      font-weight:800;
+      white-space:nowrap;
+      overflow:hidden;
+      text-overflow:ellipsis;
     }
-
-    h2 {
-      font-size: 18px;
-      margin: 0 0 12px;
+    .imdbChip{
+      font-size:12px;
+      font-weight:700;
+      padding:6px 12px;
+      border-radius:999px;
+      background:rgba(170,120,255,0.15);
+      border:1px solid rgba(170,120,255,0.35);
+      color:#c9a8ff;
+      white-space:nowrap;
     }
-
-    p {
-      margin: 0 0 12px;
-      color: var(--muted);
+    .imdbMeta{
+      font-size:13px;
+      opacity:0.9;
+      display:flex;
+      gap:8px;
+      flex-wrap:wrap;
     }
-
-    ul {
-      margin: 8px 0 0 18px;
-      padding: 0;
-      color: var(--muted);
+    .imdbDesc{
+      margin:0;
+      font-size:13px;
+      line-height:1.45;
+      opacity:0.85;
     }
-
-    li {
-      margin-bottom: 6px;
-    }
-
-    .grid {
-      display: grid;
-      gap: 20px;
-    }
-
-    .box {
-      position: relative;
-      background: var(--panel);
-      border: 1px solid var(--border);
-      padding: 20px;
-    }
-
-    /* Open to Work badge */
-    .open-to-work {
-      position: absolute;
-      top: 14px;
-      right: 14px;
-      display: flex;
-      align-items: center;
-      gap: 8px;
-      font-size: 12px;
-      font-weight: 700;
-      color: var(--green);
-    }
-
-    .open-dot {
-      width: 10px;
-      height: 10px;
-      border-radius: 50%;
-      background: var(--green);
-      box-shadow: 0 0 0 0 rgba(46,204,113,0.7);
-      animation: pulse 2s infinite;
-    }
-
-    @keyframes pulse {
-      0% {
-        box-shadow: 0 0 0 0 rgba(46,204,113,0.7);
-      }
-      70% {
-        box-shadow: 0 0 0 10px rgba(46,204,113,0);
-      }
-      100% {
-        box-shadow: 0 0 0 0 rgba(46,204,113,0);
-      }
-    }
-
-    /* IMDb row */
-    .imdb-card {
-      display: flex;
-      gap: 16px;
-      align-items: stretch;
-      color: inherit;
-    }
-
-    .imdb-badge {
-      width: 56px;
-      min-width: 56px;
-      background: #f5c518;
-      display: grid;
-      place-items: center;
-      font-weight: 900;
-      font-size: 16px;
-      color: #111;
-    }
-
-    .imdb-content {
-      flex: 1;
-      display: grid;
-      gap: 8px;
-    }
-
-    .imdb-title-row {
-      display: flex;
-      justify-content: space-between;
-      align-items: baseline;
-      gap: 12px;
-    }
-
-    .imdb-title {
-      margin: 0;
-      font-size: 16px;
-      font-weight: 800;
-    }
-
-    .imdb-chip {
-      font-size: 12px;
-      font-weight: 700;
-      padding: 6px 12px;
-      border-radius: 999px;
-      background: var(--purple-bg);
-      border: 1px solid var(--purple-border);
-      color: var(--purple);
-      white-space: nowrap;
-    }
-
-    .imdb-meta {
-      font-size: 13px;
-      color: var(--muted);
-      display: flex;
-      gap: 8px;
-      flex-wrap: wrap;
-    }
-
-    .imdb-desc {
-      margin: 0;
-      font-size: 13px;
-      color: var(--muted);
-    }
-
-    .imdb-cta {
-      font-size: 12px;
-      font-weight: 700;
-      color: var(--purple);
-    }
-
-    footer {
-      margin-top: 60px;
-      text-align: center;
-      color: var(--muted);
-      font-size: 13px;
+    .imdbCta{
+      font-size:12px;
+      font-weight:700;
+      color:#c9a8ff;
+      opacity:0.9;
     }
   </style>
 </head>
 
 <body>
-  <main class="container">
-    <h1>Work</h1>
+  <main class="wrap">
 
-    <section class="grid">
+    <header class="header">
+      <h1 class="title">Work</h1>
+      <p class="sub">Selected projects, services, and experience</p>
+    </header>
 
-      <div class="box">
-        <div class="open-to-work">
-          <div class="open-dot"></div>
-          Open to work
-        </div>
+    <section class="panel">
+      <h2 class="h2">Media Production Services</h2>
 
-        <h2>Media Production Services</h2>
-        <p>
-          I provide end-to-end media production services for individuals,
-          organizations, campaigns, and institutions.
-        </p>
-        <ul>
-          <li>Documentary filmmaking (development, production, post)</li>
-          <li>Video production & editing (short-form, long-form)</li>
-          <li>Event, interview, and field production</li>
-          <li>Script development and story consulting</li>
-          <li>Post-production workflows, color, and delivery</li>
-        </ul>
+      <div class="openRow" aria-label="Availability">
+        <span class="openDot" aria-hidden="true"></span>
+        <span>Open to work</span>
       </div>
 
-      <div class="box">
-        <a
-          class="imdb-card"
-          href="https://www.imdb.com/name/nm12602714/"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          <div class="imdb-badge">IMDb</div>
+      <p>
+        I provide end-to-end media production services for individuals, organizations, campaigns, and institutions.
+      </p>
 
-          <div class="imdb-content">
-            <div class="imdb-title-row">
-              <h2 class="imdb-title">Darren Steptoe — IMDb</h2>
-              <span class="imdb-chip">Film credits</span>
-            </div>
-
-            <div class="imdb-meta">
-              <span>Producer</span>
-              <span>•</span>
-              <span>Writer</span>
-              <span>•</span>
-              <span>Editor</span>
-            </div>
-
-            <p class="imdb-desc">
-              Selected documentary and narrative work, including award-winning
-              projects and festival screenings.
-            </p>
-
-            <div class="imdb-cta">Open profile ↗</div>
-          </div>
-        </a>
-      </div>
-
-      <div class="box">
-        <h2>Academic and Institutional Work</h2>
-        <p>
-          While serving as an AmeriCorps VISTA, I designed and implemented a
-          community-based project that was incorporated into applied sociology
-          coursework at the University of Tampa.
-        </p>
-        <p>
-          The project was featured as a case example in
-          <a
-            href="https://www.bloomsbury.com/us/national-service-and-volunteerism-9780739196946/"
-            target="_blank"
-          >
-            National Service and Volunteerism (Bloomsbury)
-          </a>.
-        </p>
-      </div>
-
-      <div class="box">
-        <h2>Awards / recognition:</h2>
-        <ul>
-          <li>The President’s Volunteer Service Award — 2011 / CNCS, AmeriCorps NCCC</li>
-          <li>Congressional Award — 2011 / CNCS, AmeriCorps NCCC</li>
-        </ul>
-      </div>
-
+      <ul class="links">
+        <li>Documentary filmmaking (development, production, post)</li>
+        <li>Video production and editing (short-form, long-form)</li>
+        <li>Event, interview, and field production</li>
+        <li>Script development and story consulting</li>
+        <li>Post-production workflows, color, and delivery</li>
+      </ul>
     </section>
 
-    <footer>
-      © 2026 Darren Steptoe
+    <section class="panel">
+      <h2 class="h2">Documentary Work</h2>
+
+      <p>
+        I co-produced, co-wrote, and edited an award-winning documentary.
+      </p>
+
+      <ul class="links">
+        <li>Founder’s Best Story Award — The African Film Festival (TAFF)</li>
+        <li>Audience Award for Best Documentary — The Black Film Summit</li>
+        <li>Nominee, Best Editing — Oregon Documentary Film Festival</li>
+      </ul>
+
+      <p>
+        <a href="https://youtu.be/ycHys4e6s3Q?si=zBzxtBS0Y" target="_blank" rel="noopener noreferrer">Watch the documentary ↗</a>
+      </p>
+    </section>
+
+    <section class="panel">
+      <a class="imdbLink" href="https://www.imdb.com/name/nm12602714/" target="_blank" rel="noopener noreferrer" aria-label="Open IMDb profile in a new tab">
+        <div class="imdbBadge" aria-hidden="true">IMDb</div>
+
+        <div class="imdbContent">
+          <div class="imdbTitleRow">
+            <h2 class="imdbTitle">Darren Steptoe — IMDb</h2>
+            <span class="imdbChip">Film credits</span>
+          </div>
+
+          <div class="imdbMeta">
+            <span>Producer</span><span>•</span><span>Writer</span><span>•</span><span>Editor</span>
+          </div>
+
+          <p class="imdbDesc">
+            Selected credits and projects across documentary and narrative work.
+          </p>
+
+          <div class="imdbCta">Open profile ↗</div>
+        </div>
+      </a>
+    </section>
+
+    <section class="panel">
+      <h2 class="h2">Academic and Institutional Work</h2>
+
+      <p>
+        As an AmeriCorps VISTA, I created and rolled out a project that was used in an applied sociology course at the University of Tampa.
+      </p>
+
+      <p>
+        Featured in <a href="https://www.bloomsbury.com/us/national-service-and-volunteerism-9780739196946/" target="_blank" rel="noopener noreferrer">National Service and Volunteerism (Bloomsbury) ↗</a>
+      </p>
+    </section>
+
+    <section class="panel">
+      <h2 class="h2">AmeriCorps</h2>
+
+      <p>Awards / recognition:</p>
+
+      <ul class="links">
+        <li>The President’s Volunteer Service Award — 2011 / CNCS</li>
+        <li>Congressional Award — 2011 / CNCS</li>
+      </ul>
+    </section>
+
+    <footer class="footer">
+      <p>© <span id="year"></span> Darren Steptoe</p>
     </footer>
+
   </main>
+
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
