--- a/work.html
+++ b/work.html
@@ -8,31 +8,6 @@
   <link rel="stylesheet" href="./styles.css" />
 
   <style>
-    .navBar{
-      display:flex;
-      flex-wrap:wrap;
-      gap:10px;
-      align-items:center;
-    }
-    .navBar a{
-      display:inline-flex;
-      align-items:center;
-      gap:8px;
-      padding:8px 12px;
-      border:1px solid rgba(255,255,255,0.10);
-      background:rgba(255,255,255,0.04);
-      color:inherit;
-      text-decoration:none;
-    }
-    .navBar a:hover{
-      background:rgba(255,255,255,0.06);
-    }
-    .navBadge{
-      font-weight:900;
-      letter-spacing:0.5px;
-      opacity:0.9;
-    }
-
     .openRow{
       display:flex;
       justify-content:flex-start;
@@ -155,16 +130,6 @@
       <p class="sub">Selected projects, services, and experience</p>
     </header>
 
-    <section class="panel" aria-label="Site navigation">
-      <div class="navBar">
-        <a href="./index.html"><span class="navBadge">DS</span><span>Home</span></a>
-        <a href="./work.html">Work</a>
-        <a href="./books.html">Books</a>
-        <a href="./fantasy.html">Fantasy</a>
-        <a href="./documents.html">Documents</a>
-      </div>
-    </section>
-
     <section class="panel" aria-label="Site search">
       <div class="searchRow">
         <label class="srOnly" for="q">Search</label>
@@ -209,7 +174,10 @@
       <h2 class="h2">Documentary Work</h2>
 
       <p>
-        Join 89-year-old retired educator and 2022 Nobel Peace Prize Nominee, Dr. Opal Lee (oft referred to as the “Grandmother of Juneteenth"), as she begins a years-long campaign to make her vision of Juneteenth becoming a federally-recognized holiday a reality.
+        Join 89-year-old retired educator and 2022 Nobel Peace Prize Nominee,
+        Dr. Opal Lee (oft referred to as the “Grandmother of Juneteenth”), as she
+        begins a years-long campaign to make her vision of Juneteenth becoming a
+        federally-recognized holiday a reality.
       </p>
 
       <p>
@@ -236,7 +204,13 @@
     </section>
 
     <section class="panel">
-      <a class="imdbLink" href="https://www.imdb.com/name/nm12602714/" target="_blank" rel="noopener noreferrer" aria-label="Open IMDb profile in a new tab">
+      <a
+        class="imdbLink"
+        href="https://www.imdb.com/name/nm12602714/"
+        target="_blank"
+        rel="noopener noreferrer"
+        aria-label="Open IMDb profile in a new tab"
+      >
         <div class="imdbBadge" aria-hidden="true">IMDb</div>
 
         <div class="imdbContent">
@@ -262,23 +236,20 @@
       <h2 class="h2">Academic and Institutional Work</h2>
 
       <p>
-        As an AmeriCorps VISTA, I created and rolled out a project that was used in an applied sociology course at the University of Tampa.
+        As an AmeriCorps VISTA, I created and rolled out a project that was used in
+        an applied sociology course at the University of Tampa.
       </p>
 
       <p>
-        Featured in <a href="https://www.bloomsbury.com/us/national-service-and-volunteerism-9780739196946/" target="_blank" rel="noopener noreferrer">National Service and Volunteerism (Bloomsbury) ↗</a>
+        Featured in
+        <a
+          href="https://www.bloomsbury.com/us/national-service-and-volunteerism-9780739196946/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          National Service and Volunteerism (Bloomsbury) ↗
+        </a>
       </p>
-    </section>
-
-    <section class="panel">
-      <h2 class="h2">AmeriCorps</h2>
-
-      <p>Awards / recognition:</p>
-
-      <ul class="links">
-        <li>The President’s Volunteer Service Award — 2011 / CNCS</li>
-        <li>Congressional Award — 2011 / CNCS</li>
-      </ul>
     </section>
 
     <footer class="footer">
@@ -289,11 +260,11 @@
 
   <script>
     const PAGES = [
-      { title: "Home", url: "./index.html", keywords: "darren steptoe home", content: "Home page and overview." },
+      { title: "Home", url: "./index.html", keywords: "home", content: "Home page and overview." },
       { title: "Work", url: "./work.html", keywords: "work media production documentary imdb", content: "Media production services, documentary work, film credits, institutional work." },
-      { title: "Books", url: "./books.html", keywords: "books writing institutional clarity", content: "Books and upcoming releases." },
-      { title: "Fantasy", url: "./fantasy.html", keywords: "fantasy football leaguesafe", content: "Fantasy football info and rules." },
-      { title: "Documents", url: "./documents.html", keywords: "documents files directory", content: "Document links and resources." }
+      { title: "Books", url: "./books.html", keywords: "books writing", content: "Books and upcoming releases." },
+      { title: "Fantasy", url: "./fantasy.html", keywords: "fantasy football", content: "Fantasy football info and rules." },
+      { title: "Documents", url: "./documents.html", keywords: "documents files", content: "Document links and resources." }
     ];
 
     const dir = document.getElementById("dir");
