--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
     <!-- Payment -->
     <section class="panel" aria-label="Payments">
       <h2 class="h2">Payment</h2>
+
+      <img
+        src="./assets/Stripe_Logo,_revised_2016.svg.png"
+        alt="Stripe"
+        style="height:22px;margin:6px 0 12px 0;display:block;"
+      />
+
       <p>
         For invoices, deposits, or project payments, you can securely pay online using card, Apple Pay, or Google Pay.
       </p>
