--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
     </section>
 
     <!-- Payment -->
-    <section class="panel" aria-label="Payments">
+    <section class="panel" aria-label="Payments" style="position:relative;">
       <h2 class="h2">Payment</h2>
 
       <img
         src="./assets/Stripe_Logo,_revised_2016.svg.png"
         alt="Stripe"
-        style="height:22px;margin:6px 0 12px 0;display:block;"
+        style="position:absolute;top:16px;right:16px;height:20px;"
       />
 
       <p>
