--- a/fantasy.html
+++ b/fantasy.html
@@ -151,7 +151,7 @@
         alt="LeagueSafe logo"
         style="position:absolute; top:16px; right:16px; width:40px; height:auto;"
       />
-      <h2 class="h2">LeagueSafe Entry Fee</h2>
+      <h2 class="h2">Entry Fee</h2>
       <p>All league funds are securely collected and distributed through <strong>LeagueSafe.com</strong>.</p>
       <p>Entry fee: <strong>$25 + processing fee</strong></p>
       <p>
