--- a/fantasy.html
+++ b/fantasy.html
@@ -68,14 +68,14 @@
         results, and how to join.
       </p>
       <p>
-        <strong>There are several open spots available.</strong> If you’re interested in joining,
+        <strong>There are several open spots available for the 2026-27 season.</strong> If you’re interested in joining,
         review the information below and use the LeagueSafe link to enter.
       </p>
     </section>
 
-    <!-- Settings Snapshot -->
-    <section class="panel" aria-label="Settings snapshot">
-      <h2 class="h2">Settings Snapshot</h2>
+    <!-- Snapshot -->
+    <section class="panel" aria-label="Snapshot">
+      <h2 class="h2">Snapshot</h2>
       <ul class="links">
         <li>Hosting site: NFL.com</li>
         <li>League name: Blitzed and Confused</li>
