--- a/fantasy.html
+++ b/fantasy.html
@@ -145,20 +145,24 @@
     </section>
 
     <!-- LeagueSafe -->
-    <section class="panel" aria-label="LeagueSafe" style="position: relative;">
+    <section class="panel" style="position: relative;">
       <img
-        src="./assets/icon_full_orange.svg"
+        src="./assets/img/icon_full_orange.svg"
         alt="LeagueSafe logo"
-        style="position:absolute; top:16px; right:16px; width:40px; height:auto;"
+        style="position:absolute; top:16px; right:16px; width:40px;"
       />
-      <h2 class="h2">Entry Fee</h2>
-      <p>All league funds are securely collected and distributed through <strong>LeagueSafe.com</strong>.</p>
+      <h2 class="h2">LeagueSafe Entry Fee</h2>
+      <p>All league funds are securely collected and distributed through <strong>LeagueSafe</strong>.</p>
       <p>Entry fee: <strong>$25 + processing fee</strong></p>
-      <p>
-        <a href="https://www.leaguesafe.com/join/4351949" target="_blank" rel="noopener noreferrer">
-          https://www.leaguesafe.com/join/4351949
-        </a>
-      </p>
+
+      <a
+        href="https://www.leaguesafe.com/join/4351949"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="button"
+      >
+        Pay Your Dues
+      </a>
     </section>
 
     <footer class="footer">
