--- a/fantasy.html
+++ b/fantasy.html
@@ -147,7 +147,7 @@
     <!-- LeagueSafe -->
     <section class="panel" style="position: relative;">
       <img
-        src="./assets/img/icon_full_orange.svg"
+        src="./assets/icon_full_orange.svg"
         alt="LeagueSafe logo"
         style="position:absolute; top:16px; right:16px; width:40px;"
       />
@@ -161,7 +161,7 @@
         rel="noopener noreferrer"
         class="button"
       >
-        Pay Your Dues
+        Pay/Collect
       </a>
     </section>
 
