--- a/index.html
+++ b/index.html
@@ -83,9 +83,15 @@
       </p>
     </section>
 
-    <!-- Calendly -->
-    <section class="panel" aria-label="Schedule">
+    <!-- Schedule -->
+    <section class="panel" aria-label="Schedule" style="position:relative;">
       <h2 class="h2">Schedule</h2>
+
+      <img
+        src="./assets/Calendly_logo.png"
+        alt="Calendly"
+        style="position:absolute;top:16px;right:16px;height:20px;"
+      />
 
       <div
         class="calendly-inline-widget"
