--- a/fantasy.html
+++ b/fantasy.html
@@ -161,7 +161,7 @@
         rel="noopener noreferrer"
         class="button"
       >
-        Pay/Collect ↗
+        Pay/Collect →
       </a>
     </section>
 
